@startuml 07-component-service-template
title MVC Class Diagram — hello-service

skinparam class {
  BackgroundColor<<controller>> #E3F2FD
  BorderColor<<controller>>     #1976D2
  BackgroundColor<<view>>       #F3E5F5
  BorderColor<<view>>           #6A1B9A
  BackgroundColor<<model>>      #FFF8E1
  BorderColor<<model>>          #F57F17
  BackgroundColor<<infra>>      #ECEFF1
  BorderColor<<infra>>          #455A64
}

package "controllers" {
  class HealthController <<controller>> {
    + GET /health
  }

  class UserController <<controller>> {
    + POST /users(payload: UserCreate)
    + GET /users()
    + GET /users/{id}
  }
}

package "views (Pydantic)" {
  class UserCreate <<view>> {
    + name: str
  }
  class UserOut <<view>> {
    + id: int
    + name: str
    + created_at: datetime
  }
  class UserGreeting <<view>> {
    + id: int
    + name: str
    + message: str
  }
}

package "models (SQLAlchemy ORM)" {
  class User <<model>> {
    + id: int
    + name: str
    + created_at: datetime
    + greet() : str
  }

  class "user.py functions" as UserRepo <<model>> {
    + create_user(db, name) : User
    + get_user(db, id) : User?
    + list_users(db) : list[User]
  }
}

class Database <<infra>> {
  + engine
  + SessionLocal
  + Base
  + get_db()
}

class Settings <<infra>> {
  + db_url: str
  + nats_url: str
}

UserController ..> UserCreate    : reads
UserController ..> UserOut       : returns
UserController ..> UserGreeting  : returns
UserController ..> UserRepo      : calls
UserController ..> User          : invokes .greet()
UserController ..> Database      : Depends(get_db)

UserRepo --> User       : queries
User     ..|> Database  : extends Base
Database --> Settings   : reads DB_URL

note right of User
  Aggregate root.
  Owns its data and the
  business rule .greet().
end note

note bottom of UserController
  Thin: parses request,
  calls model, returns view.
  No SQL, no business logic here.
end note
@enduml
